--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
         <div class="content">
             <h1>Gallery</h1>
                 <p> <a href="gallery/mushrooms/mushrooms.html">Mushrooms </a> </p>
-                <p> <a href=""> Plants </a> </p>
+                <p> <a href="gallery/plants/plants.html"> Plants </a> </p>
                 <p> <a href=""> Animals </a> </p>
         </div>
   
