--- a/gallery/mushrooms/mushrooms.html
+++ b/gallery/mushrooms/mushrooms.html
@@ -24,11 +24,57 @@
         </div>
  
         <div class="gallery">
-            <img src="Amanita-mushroom.jpg" alt="Description of image 1">
-            <img src="Amanita-mushroom2.jpg" alt="Description of image 2">
-            <img src="Boletus-edulis.jpg" alt="Description of image 3">
-            <img src="Chanterelle-edible.jpg" alt="Description of image 4">
-            <img src="Shiitake.jpg" alt="Description of image 5">
+            <a href="Amanita-mushroom.jpg" target="_blank">
+                <img src="Amanita-mushroom.jpg" alt="Description of image 1" loading="lazy">
+            </a>
+            <a href="Amanita-mushroom2.jpg" target="_blank">
+                <img src="Amanita-mushroom2.jpg" alt="Description of image 2" loading="lazy">
+            </a>
+            <a href="Boletus-edulis.jpg" target="_blank">
+                <img src="Boletus-edulis.jpg" alt="Description of image 3" loading="lazy">
+            </a>
+            <a href="Chanterelle-edible.jpg" target="_blank">
+                <img src="Chanterelle-edible.jpg" alt="Description of image 4" loading="lazy">
+            </a>
+            <a href="Shiitake.jpg" target="_blank">
+                <img src="Shiitake.jpg" alt="Description of image 5" loading="lazy">
+            </a>
+            <a href="Edible-white-shimeji-mushrooms.jpg" target="_blank">
+                <img src="Edible-white-shimeji-mushrooms.jpg" alt="Description of image 6" loading="lazy">
+            </a>
+            <a href="Edible-white-shimeji-mushrooms2.jpg" target="_blank">
+                <img src="Edible-white-shimeji-mushrooms2.jpg" alt="Description of image 7" loading="lazy">
+            </a>
+            <a href="Forest-mushrooms-in-the-grass-gathering.jpg" target="_blank">
+                <img src="Forest-mushrooms-in-the-grass-gathering.jpg" alt="Description of image 8" loading="lazy">
+            </a>
+            <a href="Forest-mushrooms.jpg" target="_blank">
+                <img src="Forest-mushrooms.jpg" alt="Description of image 9" loading="lazy">
+            </a>
+            <a href="Fresh-forest-porcini-mushrooms.jpg" target="_blank">
+                <img src="Fresh-forest-porcini-mushrooms.jpg" alt="Description of image 10" loading="lazy">
+            </a>
+            <a href="Fungi-on-a-tree-in-the-forest-nz.jpg" target="_blank">
+                <img src="Fungi-on-a-tree-in-the-forest-nz.jpg" alt="Description of image 11" loading="lazy">
+            </a>
+            <a href="Ganoderma-mushroom.jpg" target="_blank">
+                <img src="Ganoderma-mushroom.jpg" alt="Description of image 12" loading="lazy">
+            </a>
+            <a href="Honey-mushrooms.jpg" target="_blank">
+                <img src="Honey-mushrooms.jpg" alt="Description of image 13" loading="lazy">
+            </a>
+            <a href="Mushroom-in-forest.jpg" target="_blank">
+                <img src="Mushroom-in-forest.jpg" alt="Description of image 14" loading="lazy">
+            </a>
+            <a href="Mushroom-russula-emetica.jpg" target="_blank">
+                <img src="Mushroom-russula-emetica.jpg" alt="Description of image 15" loading="lazy">
+            </a>
+            <a href="Mushrooms-on-a-tree.jpg" target="_blank">
+                <img src="Mushrooms-on-a-tree.jpg" alt="Description of image 16" loading="lazy">
+            </a>
+            <a href="Forest-mushrooms-on-black-stone.jpg" target="_blank">
+                <img src="Forest-mushrooms-on-black-stone.jpg" alt="Description of image 17" loading="lazy">
+            </a>
         </div>
   
   
