--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 This is a brief description of who you are. Include what
                 you do, what you work in, what value you produce,
                 what kind of person you want to become. Include any 
-                immediate credentials: Bachelor's/Masters/Postdocs. 
+                immediate credentials: Bachelor/Master/Postdoc. 
                 Any main projects that define you include in <a href=""> here</a> and 
                 <a href=""> here</a> 
             </p>
