--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
         <div class="content">
             <h1>Resume</h1>
             <p> <a href=""> PDF </a> </p>
-            <h2> Work Expereince </h2>
+            <h2> Work Experience </h2>
                 <h3> Internship x </h3>
                     <p> I did this at this company</p>
                 <h3> Company x </h3>
