Added zip files

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 Any main projects that define you include in <a href=""> here</a> and 
                 <a href=""> here</a> 
             </p>
-            <p> Download template here...</p>
+            <p> <a href="website_template.zip" download="website_template.zip"> Download the full template here</a></p>
+            <p> <a href="website_template_no_gallery.zip" download="website_template_no_gallery.zip"> Download template without gallery</a></p>
         </div>
   
   
