--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
-    <title>Title of site (name)</title>
+    <title>Title of Site </title>
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script defer="" data-domain="madewithtea.com" src="https://plausible.io/js/script.js"></script>
-  
+
     <link rel="stylesheet" href="/style.css">
-    
-    <link rel="alternate" type="application/rss+xml" title="RSS" href="https://www.madewithtea.com/rss.xml">
-    
+
   </head>
-  
+
     <body>
         <div class="navbar">
             <a href="/">Home</a>
@@ -29,7 +26,6 @@
                 <p> <a href="gallery/plants/plants.html"> Plants </a> </p>
                 <p> <a href=""> Animals </a> </p>
         </div>
-  
   
     </body>
 
