Added source code

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </p>
             <p> <a href="website_template.zip" download="website_template.zip"> Download the full template here</a></p>
             <p> <a href="website_template_no_gallery.zip" download="website_template_no_gallery.zip"> Download template without gallery</a></p>
+            <p> <a href="https://github.com/psychcool/professional-website-template"> Source Code </a> </p>
             <h2> Instructions </h2>
             <ol>
                 <li> <a href="website_template.zip"> Download Template</a> (Rename CNAME file with your website's domain name)</li>
